[dg] finished modifying table elements and sorting

--- a/src/app/users/leaderboards/leaderboards.component.css
+++ b/src/app/users/leaderboards/leaderboards.component.css
@@ -40,6 +40,11 @@ img {
     clip-path: circle(4vh at center);
 }
 
+i.big-icon {
+    font-size: 4vh;
+    padding-right: 2vh;
+}
+
 td {
     background-color: var(--dark);
     color: white;
