top-header (getting the name of the current user) + authentication saves a user to localStorage

--- a/src/app/fixed/top-header/top-header.component.css
+++ b/src/app/fixed/top-header/top-header.component.css
@@ -44,6 +44,11 @@ body {
   font-size: 1.5vw;
 }
 
+#topnav .navbar p {
+  padding-top: 2.5vh;
+  font-size: 2.5vh;
+}
+
 #topnav .navbar i .collapse {
   color: white;
 }
