--- a/src/app/fixed/top-header/top-header.component.html
+++ b/src/app/fixed/top-header/top-header.component.html
@@ -16,10 +16,13 @@
         <i routerLink="/tutorials" class="nav-link fa fa-info" aria-hidden="true"></i>
       </li>
       <li class="nav-item">
-        <i class="nav-link fa fa-cog" aria-hidden="true"></i>
+        <i routerLink="/authentication" class="nav-link fa fa-cog" aria-hidden="true"></i>
       </li>
       <li class="nav-item">
         <i class="nav-link fa fa-user" aria-hidden="true" routerLink="/myprofile"></i>
+      </li>
+      <li class="nav-item">
+        <p class="align-middle">Welcome {{name}}</p>
       </li>
     </ul>
   </div>
