[dg] implemented logout function and button onto navbar

--- a/src/app/fixed/top-header/top-header.component.html
+++ b/src/app/fixed/top-header/top-header.component.html
@@ -21,6 +21,9 @@
       <li class="nav-item">
         <i class="nav-link fa fa-user" aria-hidden="true" routerLink="/myprofile"></i>
       </li>
+      <li>
+        <i class="nav-link fa fa-sign-out" aria-hidden="true" routerLink=""></i>
+      </li>
       <li class="nav-item">
         <p class="align-middle">Welcome {{name}}</p>
       </li>
