--- a/src/app/tutorials/tutorials.component.css
+++ b/src/app/tutorials/tutorials.component.css
@@ -8,7 +8,7 @@
   /*margin-top: 4vh;*/
   position: fixed;
   width: 100vw;
-  margin-left: -12%;
+  /*margin-left: -12%;*/
   z-index: 10;
   /*opacity: 0.9;*/
   background-color: white;
@@ -50,7 +50,7 @@ label {
 }
 
 #l1 {
-  margin-left: 46.5%;
+  margin-left: 71vh;
 }
 
 label:before {
