--- a/src/app/fixed/side-bar/side-bar.component.html
+++ b/src/app/fixed/side-bar/side-bar.component.html
@@ -26,7 +26,7 @@
         </li>
 
         <li class="sidebar-list">
-          <a routerLink="/api">API Docs <span class="menu-icon fa fa-book"></span></a>
+          <a routerLink="/api-guides">API Docs <span class="menu-icon fa fa-book"></span></a>
         </li>
 
         <li class="sidebar-list">
