--- a/src/app/users/dashboard/dashboard.component.css
+++ b/src/app/users/dashboard/dashboard.component.css
@@ -167,3 +167,39 @@ img {
 .carousel-inner {
    margin-bottom:30px;
 }
+
+.currentdatapanels {
+    text-align: center;
+}
+
+.currentdatapanels p {
+    font-size: 42px;
+}
+
+@media screen and (max-width: 720px) {
+    .currentdatapanels p {
+        font-size: 28px;
+    }
+}
+
+@media screen and (max-width: 520px) {
+    .currentdatapanels p {
+        font-size: 16px;
+    }
+}
+
+th {
+    text-align: center;
+}
+
+.red {
+    color: #8f1210;
+}
+
+.green {
+    color: #128f10;
+}
+
+.container {
+    width:20000px;
+}
