--- a/src/app/tutorials/tutorials.component.css
+++ b/src/app/tutorials/tutorials.component.css
@@ -3,12 +3,12 @@
 
 .type {
   /*margin-top: 1.4vh;*/
-  margin-top: 0.6vh;
+  /*margin-top: 0.6vh;*/
   margin-bottom: 0.4vh;
   /*margin-top: 4vh;*/
   position: fixed;
-  width: 100vw;
-  /*margin-left: -12%;*/
+  width: 100%;
+  margin-left: -11%;
   z-index: 10;
   /*opacity: 0.9;*/
   background-color: white;
