[dg] updated leaderboard to fully use database. Sorted out css

--- a/src/app/users/leaderboards/leaderboards.component.css
+++ b/src/app/users/leaderboards/leaderboards.component.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Cabin:600');
 table {
+    margin-top: 10px;
     border-collapse: separate;
     text-align: center;
     margin-left: -10%;
@@ -16,7 +17,6 @@ thead tr {
     text-transform: uppercase;
     font-family: 'Cabin', sans-serif;
     color: var(--dark);
-
 }
 
 #c3 {
