--- a/src/app/users/leaderboards/leaderboards.component.html
+++ b/src/app/users/leaderboards/leaderboards.component.html
@@ -7,16 +7,16 @@
             <mfDefaultSorter by="name">Name</mfDefaultSorter>
         </th>
         <th style="width: 20%">
-            <mfDefaultSorter [by]="sortByValue">Country</mfDefaultSorter>
+            <mfDefaultSorter [by]="sortByCountry">Country</mfDefaultSorter>
         </th>
         <th style="width: 20%">
-            <mfDefaultSorter [by]="sortByValue">Split</mfDefaultSorter>
+            <mfDefaultSorter [by]="sortBySplit">Split</mfDefaultSorter>
         </th>
         <th style="width: 20%">
-            <mfDefaultSorter [by]="sortByValue">Lifetime Returns</mfDefaultSorter>
+            <mfDefaultSorter [by]="sortByReturns">Lifetime Returns</mfDefaultSorter>
         </th>
         <th style="width: 10%">
-            <mfDefaultSorter [by]="sortByValue">Risk</mfDefaultSorter>
+            <mfDefaultSorter [by]="sortByRisk">Risk</mfDefaultSorter>
         </th>
     </tr>
     </thead>
@@ -30,7 +30,7 @@
           {{item.name}}
         </td>
         <td class="information align-middle">{{item.country}}</td>
-        <td class="information align-middle">{{item.split}}</td>
+        <td class="information align-middle">{{item.split}} : {{100-item.split}}</td>
         <td class="align-middle">{{item.returns | currency:'USD':true:'1.2-2' }}</td>
         <td class="align-middle">{{item.risk}}</td>
         <td class="align-middle">
