[dg] fixed routing for getting started page in navbar and side bar

--- a/src/app/fixed/side-bar/side-bar.component.html
+++ b/src/app/fixed/side-bar/side-bar.component.html
@@ -22,7 +22,7 @@
         </li>
 
         <li class="sidebar-list">
-          <a routerLink="/tutorials">Getting Started <span class="menu-icon fa fa-info"></span></a>
+          <a routerLink="/getting-started">Getting Started <span class="menu-icon fa fa-info"></span></a>
         </li>
 
         <li class="sidebar-list">
