--- a/src/app/fixed/top-header/top-header.component.html
+++ b/src/app/fixed/top-header/top-header.component.html
@@ -16,7 +16,7 @@
         <i class="nav-link fa fa-inbox" aria-hidden="true" routerLink="/chat"></i>
       </li>
       <li class="nav-item">
-        <i routerLink="/tutorials" class="nav-link fa fa-info" aria-hidden="true"></i>
+        <i routerLink="/getting-started" class="nav-link fa fa-info" aria-hidden="true"></i>
       </li>
       <li class="nav-item">
         <i routerLink="/authentication" class="nav-link fa fa-cog" aria-hidden="true"></i>
