[dg] fixed routing bug on logo. Fixed phantom text on chat page

--- a/src/app/users/chat/chat.component.html
+++ b/src/app/users/chat/chat.component.html
@@ -1,5 +1,5 @@
 <div class="card">
-  Hi {{numMsg}}
+  <!-- Hi {{numMsg}} -->
 </div>
 <div class="inbox">
   <app-message *ngFor="let message of messages"
