added name for file in editor + finish hooking up messaging service between users

--- a/src/app/projectsFolder/projects/projects.component.html
+++ b/src/app/projectsFolder/projects/projects.component.html
@@ -11,5 +11,6 @@
     <project-box *ngFor="let project of projects"
       [project]="project">
     </project-box>
-
 </div>
+
+    <button style="margin-top:20%" class="btn btn-default">Add New</button>
