--- a/src/app/projectsFolder/editor/editor.component.html
+++ b/src/app/projectsFolder/editor/editor.component.html
@@ -26,6 +26,11 @@
   </nav>
     <!-- The ace editor -->
     <div class="container">
+      <div class="form-group" *ngIf="!isSaved">
+        <input type="text" [(ngModel)]="title" class="form-control">
+        <button class="btn btn-default" (click)="isSaved=true">Save</button>
+      </div>
+      <h4 *ngIf="isSaved" (click)="isSaved=false">{{title}}</h4>
       <ace-editor id="editor" class="ace"
        [(text)]="text"
        #editor></ace-editor>
