--- a/src/app/fixed/side-bar/side-bar.component.html
+++ b/src/app/fixed/side-bar/side-bar.component.html
@@ -6,7 +6,7 @@
       <ul class="sidebar">
         <li class="sidebar-title"><span>NAVIGATION</span></li>
         <li class="sidebar-list">
-          <a routerLink="/">Dashboard <span class="menu-icon fa fa-tachometer"></span></a>
+          <a routerLink="/dashboard">Dashboard <span class="menu-icon fa fa-tachometer"></span></a>
         </li>
 
         <li class="sidebar-list">
