--- a/src/app/myprofile/myprofile.component.html
+++ b/src/app/myprofile/myprofile.component.html
@@ -14,7 +14,7 @@
   </div>
 
   <div class="col-md-8">
-    <h5>OPEN INVESTMENTS</h5>
+    <h5>ALGORITHMS</h5>
     <div id="currentPlayer" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
       <li data-target="#currentPlayer" data-slide-to="0" class="active"></li>
