[my] update npm dependencies

--- a/src/app/fixed/top-header/top-header.component.css
+++ b/src/app/fixed/top-header/top-header.component.css
@@ -12,7 +12,7 @@ body {
 
 #topnav .navbar {
   width: 100%;
-  height: 12%;
+  height: 85px;
   margin-bottom: 0;
   border-bottom:none;
   padding-top: 1.5vh;
