--- a/src/app/projectsFolder/projects/projects.component.css
+++ b/src/app/projectsFolder/projects/projects.component.css
@@ -1,5 +1,5 @@
 .type {
-  margin-top: -1.4vh;
+  margin-top: -10px;
   position: fixed;
   width: 100vw;
   margin-left: -11%;
@@ -9,6 +9,7 @@
 }
 
 .all-projects {
+    margin-top: 52px;
   width: 80%;
   float: right;
 }
