--- a/src/app/projectsFolder/projects/projects.component.html
+++ b/src/app/projectsFolder/projects/projects.component.html
@@ -7,10 +7,8 @@
 </div>
 
 <div class=all-projects>
-
     <project-box *ngFor="let project of projects"
       [project]="project">
     </project-box>
 </div>
-
-    <button style="margin-top:20%" class="btn btn-default">Add New</button>
+<button type="button" style="padding: 10px 16px;" class="btn btn-lg btn-success btn-block"><i class="fa fa-plus" aria-hidden="true"></i> Create new project</button>
