--- a/src/app/users/dashboard/dashboard.component.css
+++ b/src/app/users/dashboard/dashboard.component.css
@@ -2,7 +2,7 @@
 @import url('https://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.css');
 
 .type {
-  margin-top: -1.4vh;
+  margin-top: -10px;
   position: fixed;
   width: 100vw;
   margin-left: -15%;
