--- a/src/app/projectsFolder/myproject/myproject.component.css
+++ b/src/app/projectsFolder/myproject/myproject.component.css
@@ -1,26 +1,20 @@
 .project-box {
   width: 200px;
   height: 100%;
-  background-color: var(--white);
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   float: left;
-  margin-left: 3%;
-  margin-top: 2%;
 }
 
 /* On mouse-over, add a deeper shadow */
-.project-box:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+.container:hover {
+    background-color: #dfd;
 }
 
 /* Add some padding inside the card container */
 .container {
-    padding: 2px 16px;
+    padding: 16px 16px;
 }
 
 button {
-  background-color: var(--green);
-  color: var(--white);
   border: none;
 }
