--- a/src/app/projectsFolder/projects/projects.component.html
+++ b/src/app/projectsFolder/projects/projects.component.html
@@ -12,3 +12,19 @@
     </project-box>
 </div>
 <button type="button" style="padding: 10px 16px;" class="btn btn-lg btn-success btn-block"><i class="fa fa-plus" aria-hidden="true"></i> Create new project</button>
+
+<div class="row" style="margin-top:20px;">
+    <div class="col-md-12">
+        <h5>RUNNING PROJECTS</h5>
+                    <table class="table borderless">
+                        <tbody>
+                            <tr>
+                                <th>Algorithm</th>
+                            </tr>
+                            <tr>
+                                <td>You have no running algorithms.</td>
+                            </tr>
+                        </tbody>
+                    </table>
+    </div>
+</div>
