--- a/src/app/users/dashboard/dashboard.component.html
+++ b/src/app/users/dashboard/dashboard.component.html
@@ -326,7 +326,7 @@
 
 
     <div class="row col-md-12">
-        <div class="well">
+        <div class="well" style="padding: 4px; width: 100%;">
             Price data correct as of 15 minutes ago.
         </div>
     </div>
