added picture upload + working on realtime changes in chat

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="container background">
+  <toaster-container></toaster-container>
   <router-outlet name="topheader"></router-outlet>
   <div class="body">
     <router-outlet name="sidebar"></router-outlet>
