--- a/src/app/users/chat/chat.component.html
+++ b/src/app/users/chat/chat.component.html
@@ -1,7 +1,7 @@
 <div class="card">
   <!-- Hi {{numMsg}} -->
 </div>
-<div class="inbox">
+<div class="inbox" id="msg">
   <app-message *ngFor="let message of messages"
     [message]="message">
   </app-message>
