--- a/src/app/myprofile/myprofile.component.html
+++ b/src/app/myprofile/myprofile.component.html
@@ -1,6 +1,14 @@
-<div class="row">
-  <img src="../../assets/images/neil.jpg" class="profile col-md-4"/>
+<div class="container row">
+  <!-- <img src="../../assets/images/neil.jpg" class="profile col-md-4"/> -->
+  <img id="myImage" src="../../assets/images/neil.jpg" class="profile col-md-4">
   <h2 class="align-middle">{{currentUser.username}}</h2>
+
+  <!-- File input for the file-upload plugin, with special ng2-file-upload directive called ng2FileSelect -->
+  <input type="file" name="photo" (change)="onImageChange($event)" ng2FileSelect [uploader]="uploader" />
+  <!-- button to trigger the file upload when submitted -->
+  <button type="button" class="btn btn-success btn-s" (click)="uploader.uploadAll()" [disabled]="!uploader.getNotUploadedItems().length">
+        Upload with ng-2 file uploader
+  </button>
 </div>
 
 <div class="row">
