[dg] modified which graphs appear

--- a/src/app/projectsFolder/graphs/graphs.component.html
+++ b/src/app/projectsFolder/graphs/graphs.component.html
@@ -1,13 +1,13 @@
 <div class="container">
 	<div class="row">
 		<div class="col-sm-6 col-md-6">
-			<div [ng2-highstocks]="chartOptions" class="graph"></div>
-		</div>
-		<div class="col-sm-6 col-md-6">
-			<div [ng2-highstocks]="chartBar" class="graph"></div>
-		</div>
-		<div class="col-sm-6 col-md-6">
 			<div [ng2-highstocks]="chartStock" class="graph"></div>
+		</div>
+		<div class="col-sm-6 col-md-6">
+			<div [ng2-highstocks]="winLoss" class="graph"></div>
+		</div>
+		<div class="col-sm-6 col-md-6">
+			<div [ng2-highstocks]="vot" class="graph"></div>
 		</div>
 		<div class="col-sm-6 col-md-6">
 			<div [ng2-highcharts]="ttpc"></div>
