allow the user to update the file and add a new file in the database whenever create new is clicked

--- a/src/app/projectsFolder/editor/editor.component.html
+++ b/src/app/projectsFolder/editor/editor.component.html
@@ -19,7 +19,7 @@
                 </li>
             </ul>
             <div class="btn-group">
-                <button class="btn btn-info" (click)="addTask($event)" type="button">Save</button>
+                <button class="btn btn-info" (click)="updateStatus()" type="button">Save</button>
                 <button routerLink="/graphs" class="btn btn-primary" type="button">Backtest</button>
                 <button routerLink="/dashboard" class="btn btn-success" type="button">Run Live!</button>
             </div>
