--- a/src/app/projectsFolder/projects/projects.component.html
+++ b/src/app/projectsFolder/projects/projects.component.html
@@ -11,7 +11,7 @@
       [project]="project">
     </project-box>
 </div>
-<button type="button" style="padding: 10px 16px;" class="btn btn-lg btn-success btn-block"><i class="fa fa-plus" aria-hidden="true"></i> Create new project</button>
+<button type="button" style="padding: 10px 16px;" class="btn btn-lg btn-success btn-block" (click)="addNewProject($event)"><i class="fa fa-plus" aria-hidden="true"></i> Create new project</button>
 
 <div class="row" style="margin-top:20px;">
     <div class="col-md-12">
