--- a/src/app/projectsFolder/projects/projects.component.css
+++ b/src/app/projectsFolder/projects/projects.component.css
@@ -17,11 +17,12 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,700');
 @import url('https://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.css');
 
+/*
 *, *:before, *:after {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
+}*/
 
 input {
   display: none;
