[dg] fixed dashboard bug with highstocks which causes travis to fail

--- a/src/app/users/dashboard/dashboard.component.html
+++ b/src/app/users/dashboard/dashboard.component.html
@@ -21,7 +21,7 @@
                         <h5 style="text-align: center">Your overall statistics <br /></h5>
                         <br />
                         <div class="col-md-12">
-                            <div [ng2-highstocks]="chartStock" class="graph"></div>
+<!--                            <div [ng2-highstocks]="chartStock" class="graph"></div> -->
                         </div>
                         <!--<img class="d-block img-fluid" src="../../../assets/images/graph.png" alt="First slide">-->
                     </div>
